# post-train-llms-dlai

./: .gitignore  README.md  pyproject.toml
docs/: Post-training_LLM_Summary.md  qwen_model.md
notebooks/: Lesson_3.ipynb  Lesson_3_hf_manager.ipynb  Lesson_3_mo.py  Lesson_3_refactor.ipynb  Lesson_HF_setup.ipynb  hf_manager.py  my_add_mo.py  tmp_markdown.py  tmp_markdown2.py
notebooks/mo/: Lesson_3_mo.py  my_add_mo.py  my_add_mo_actual.py  simple_eg_lazy.py
notebooks/originals/: Lesson_3.ipynb  Lesson_5.ipynb  Lesson_7.ipynb  README.md
scripts/: get_hf_cache.py
src/post_train_llms_dlai/: __init__.py
