[project]
name = "post-train-llms-dlai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Booth", email = "michael@databooth.com.au" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "loguru>=0.7.3",
    "pandas>=2.3.1",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "trl>=0.19.1",
]

[project.scripts]
post-train-llms-dlai = "post_train_llms_dlai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo>=0.14.10",
    "notebook>=7.4.4",
]
